<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/naranja">


    <TextView
        android:id="@+id/welcomeregistrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcomeregistrase"
        android:textColor="@color/marrón"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/centerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeregistrase"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/extraestilo"
            android:hint="@string/register_email_hint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            android:autofillHints="emailAddress"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/etRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/extraestilo"
            android:hint="@string/register_password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:autofillHints="password"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/teal_700"
            android:elevation="4dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/register_button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/cian"
            android:layout_gravity="center"
            android:elevation="4dp"
            android:padding="10dp"
            android:text="@string/login_button"
            android:textColor="@color/black"/>
    </LinearLayout>

</RelativeLayout>
