<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp">


        <TextView
            android:id="@+id/nombre_farmacia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pharmacy_name"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/teal_700"
            android:paddingTop="16dp"
            android:fontFamily="sans-serif-medium"/>

        <ImageView
            android:id="@+id/logo_farmacia"
            android:layout_width="165dp"
            android:layout_height="167dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
        android:contentDescription="@string/pharmacy_name"
        android:src="@drawable/logo2" />


        <TextView
            android:id="@+id/especializacion_farmacia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/specialization"
            android:textStyle="bold"
            android:textColor="@color/rojo"
            android:layout_marginTop="16dp"
            android:textSize="16sp" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:backgroundTint="@color/clarito">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/mision_farmacia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/mission"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:backgroundTint="@color/teal_200">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/vision_farmacia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/vision"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:lineSpacingExtra="4dp"
                    android:fontFamily="sans-serif"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/ubicacion"
            android:layout_width="136dp"
            android:layout_height="106dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"
        android:contentDescription="@string/pharmacy_name"
        android:src="@drawable/ubicacion" />

        <TextView
            android:id="@+id/ubicacion_farmacia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:paddingBottom="8dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/ver_lista_medicamentos_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vermedicamento"
            android:backgroundTint="@color/teal_700"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/historial_compras_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ver Historial de Compras"
            android:layout_marginTop="6dp" />

        <Button
            android:id="@+id/cerrar_sesion_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cerrar_sesion"
            android:backgroundTint="@color/rojo"
            android:textColor="@color/white"/>
    </LinearLayout>
</ScrollView>
